D-33850 Fixing iPad spacing defect

--- a/public/styles/projects/lookbooks/outfit-ideas-stylish-summer/style.scss
+++ b/public/styles/projects/lookbooks/outfit-ideas-stylish-summer/style.scss
@@ -107,7 +107,7 @@ ul {
 	font-family: "Lato", "Avenir LT W01 55 Roman", Arial, sans-serif;
 	text-align: left;
     margin: 0 auto;
-    width: 70%;
+    width: 75%;
     margin-bottom: 3vw;
    	position: relative;
 
@@ -131,7 +131,7 @@ ul {
 
     .info {
     	position: absolute;
-    	margin: 1vh 0.5vw;
+    	margin: 1vh 0.75vw;
     	font-size: 0.75vw;
 
     	.line {
@@ -147,7 +147,7 @@ ul {
 
     .section-copy {
     	font-family: "Avenir LT W01 55 Roman", 'Lato', sans-serif;
-    	width: 26%;
+    	width: 24%;
     	position: relative;
     	top: 1em;
     	vertical-align: top;
@@ -156,7 +156,7 @@ ul {
 
     	.shop {
     		font-family: "Playfair Display", serif;
-    		font-size: 2.5vw;
+    		font-size: 2.4vw;
     		font-weight: 700;
     		margin: 2vw auto 0;
     		left: 0;
@@ -215,7 +215,7 @@ ul {
     .second { 
     	width: 26%;
     	margin-top: 2vw;
-    	margin-right: 20px;
+    	padding-right: 2%;
     	vertical-align: top;
     }
 
@@ -234,7 +234,7 @@ ul {
 #section-6 {
     .second { 
     	width: 43%;
-    	margin-right: 20px;
+    	padding-right: 2%;
     }
 
     .third { 
